--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -10,7 +10,7 @@
         content="Solução digital para o seu negócio ou empreendimento, colocamos sua loja no ar | Website | Identidade visual |Landing page | Social Media | Tráfego Pago | Criativos | E-commerce's .">
 
     <link rel="stylesheet" href="css/main.css">
-    <link class="icon-logocircle" rel="icon" type="image/png" href="img/icons/icon.png">
+    <link class="icon-logocircle" rel="icon" type="image/png" href="img/icons/icon.png" alt="icon-abystract">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -31,7 +31,7 @@
 
                 <div class="brand-logo">
                     <a href="#inicio">
-                        <img src="img/icons/icon.png" alt="Logo">
+                        <img src="img/icons/icon.png" alt="brand-Logo-abystract">
                     </a>
                 </div>
 
@@ -67,7 +67,7 @@
 
                             <a href="https://www.linkedin.com/company/abystract-digital-solutions/">
                                 <img class="linkedin-icon" src="img/icons/Logo-linkedIn.png" alt="LinkedIn icone">
-                            </a>  
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -132,21 +132,19 @@
 
                 <div class="block1">
                     <h2 class="title leftToRight"> Conheça-nos. </h2>
-                    <p class="sub sub-1 leftToRight">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Asperiores placeat
-                        necessitatibus corrupti sint ducimus facere nihil repellendus, consequuntur quibusdam veritatis
-                        ab
-                        similique nobis at ad quaerat nulla voluptates dicta perferendis?</p>
-                    <p class="sub sub-2 leftToRight">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Asperiores placeat
-                        necessitatibus corrupti sint ducimus facere nihil repellendus, consequuntur quibusdam veritatis
-                        ab
-                        similique nobis at ad quaerat nulla voluptates dicta perferendis?</p>
-                    <p class="sub sub-3 leftToRight">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Asperiores placeat
-                        necessitatibus corrupti sint ducimus facere nihil repellendus, consequuntur quibusdam veritatis
-                        ab
-                        similique nobis at ad quaerat nulla voluptates dicta perferendis?</p>
+                    <p class="sub sub-1 leftToRight">A Abystract Digital Solutions foi fundada nos dia 08 de agosto de
+                        2024 por Júlio Portugal e Moisés Souza. Após sete anos de amizade e dois anos de planejamento,
+                        unimos nossas habilidades para criar uma empresa que oferece serviços completos de criação de
+                        websites, identidade visual e gerenciamento de redes sociais. A partir dessa parceria, buscamos
+                        unir criatividade e tecnologia para oferecer soluções digitais completas aos nossos clientes.
+                    </p>
+                    <p class="sub sub-2 leftToRight">Nós nos dedicamos a entender as necessidades de cada projeto e a
+                        encontrar as melhores soluções, desde a criação de uma identidade visual forte até a construção
+                        de uma presença digital que gere resultados concretos. Nosso compromisso é ser um parceiro
+                        estratégico em cada etapa dessa jornada.</p>
+                    <p class="sub sub-3 leftToRight">Mais do que oferecer serviços, nós prezamos por criar e manter bons
+                        relacionamentos com nossos clientes. Acreditamos que o sucesso vem de uma parceria, onde ambos,
+                        crescem juntos.</p>
 
                     <div class="profile-cards">
                         <div class="profile profile-1">
@@ -215,31 +213,29 @@
             <div class="block2">
                 <div class="service website-service leftToRight">
                     <h2 class="title leftToRight">Web Sites </h2>
-                    <p class="sub-title leftToRight">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
-                        adipisci
-                        voluptate aliquam asperiores ipsa, enim similique? Animi itaque mollitia ex a, harum dolor
-                        labore quia totam ipsa assumenda repellendus blanditiis!</p>
+                    <p class="sub-title leftToRight">Um bom lead começa com um site que atenda às necessidades do seu
+                        público. Criamos sites personalizados e responsivos para destacar sua marca e gerar resultados.
+                        Seja a escolha certa entre seus concorrentes!</p>
                 </div>
                 <div class="service idv-service leftToRight">
                     <h2 class="title leftToRight">Identidade Visual </h2>
-                    <p class="sub-title leftToRight">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
-                        adipisci
-                        voluptate aliquam asperiores ipsa, enim similique? Animi itaque mollitia ex a, harum dolor
-                        labore quia totam ipsa assumenda repellendus blanditiis!</p>
+                    <p class="sub-title leftToRight">Desenvolvemos identidades visuais que refletem a essência e os
+                        valores do seu negócio. Criamos logotipos, paletas de cores e materiais gráficos personalizados
+                        para que sua marca se destaque de forma autêntica e impactante. Nosso objetivo é fortalecer sua
+                        presença no mercado, transmitindo credibilidade e conectando sua empresa ao público certo.</p>
                 </div>
                 <div class="service social-service leftToRight">
                     <h2 class="title leftToRight">Social Media / Marketing </h2>
-                    <p class="sub-title leftToRight">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
-                        adipisci
-                        voluptate aliquam asperiores ipsa, enim similique? Animi itaque mollitia ex a, harum dolor
-                        labore quia totam ipsa assumenda repellendus blanditiis!</p>
+                    <p class="sub-title leftToRight">Nossa equipe será responsável pela Gestão de Suas Redes Sociais e
+                        por garantir novos conteúdos toda semana, além de impulsionar seus conteúdos para entregá-los à
+                        audiência</p>
                 </div>
                 <div class="service paid-traffic-service leftToRight">
                     <h2 class="title leftToRight">Tráfego Pago </h2>
-                    <p class="sub-title leftToRight">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
-                        adipisci
-                        voluptate aliquam asperiores ipsa, enim similique? Animi itaque mollitia ex a, harum dolor
-                        labore quia totam ipsa assumenda repellendus blanditiis!</p>
+                    <p class="sub-title leftToRight">Para obter resultados rápidos e eficientes, é essencial uma gestão
+                        de tráfego eficaz. Isso permitirá que seu negócio se destaque frente aos concorrentes, atraindo
+                        mais clientes e potencializando seu crescimento. Sem a necessidade de panfletos e outdoors.
+                        Apareça onde a maior parte das pessoas gastam o seu tempo: na internet.</p>
                 </div>
             </div>
 
@@ -257,7 +253,10 @@
                     <div class="bento-item large width-3">
                         <h3>Social Media</h3>
                         <div class="img-container">
-                            <img src="img/bento/Socialmediabanner.png" alt="Social Media">
+                            <!-- <img src="img/bento/Socialmediabanner.png" alt="Social Media"> -->
+                            <iframe src="https://www.behance.net/embed/project/194537243?ilo0=1" height="540"
+                                width="600" allowfullscreen lazyload frameborder="0" allow="clipboard-write4"
+                                refererPolicy="strict-origin-when-cross-origin"></iframe>
                         </div>
                         <div class="arrow-border">
                             <span class="arrow material-symbols-rounded">arrow_forward</span>
@@ -274,10 +273,13 @@
                     </div>
 
                     <div class="bento-item width-4">
-                        <h3>Área de Membros</h3>
+                        <h3>Social Media</h3>
                         <div class="img-container">
 
-                            <img src="img/bento/member.png" alt="Área de Membros">
+                            <!-- <img src="img/bento/member.png" alt="Área de Membros"> -->
+                            <iframe src="https://www.behance.net/embed/project/204193357?ilo0=1" height="246"
+                                width="404" allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                                refererPolicy="strict-origin-when-cross-origin"></iframe>
                         </div>
                         <div class="arrow-border">
                             <span class="arrow material-symbols-rounded">arrow_forward</span>
@@ -294,11 +296,17 @@
                             <span class="arrow material-symbols-rounded">arrow_forward</span>
                         </div>
                     </div>
+
                     <div class="bento-item width-3">
+
                         <h3>Identidade Visual</h3>
                         <div class="img-container">
 
-                            <img src="img/bento/IDV2.png" Identidade Visual">
+                            <!-- <img src="img/bento/IDV2.png" alt="Identidade Visual"> -->
+                            <iframe src="https://www.behance.net/embed/project/186079875?ilo0=1" height="240"
+                                width="500" allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                                refererPolicy="strict-origin-when-cross-origin"></iframe>
+
                         </div>
                         <div class="arrow-border">
                             <span class="arrow material-symbols-rounded">arrow_forward</span>
@@ -376,7 +384,7 @@
                 </div>
 
                 <div class="brand-logo-inner">
-                    <img src="img/icon-complete-W.png" alt="">
+                    <img src="img/icon-complete-W.png" alt="brand-logo-abystract">
                 </div>
 
                 <div class="links-inner">
