--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Abystract - Soluções digitais </title>
     <meta name="description"
-        content="Solução digital para o seu negócio ou empreendimento, colocamos sua loja no ar | Website | Identidade visual |Landing page | Social Media | Tráfego Pago | Criativos | E-commerce's .">
+        content="Solução digital para o seu negócio ou empreendimento, colocamos sua loja no ar Abystract | Website | Identidade visual |Landing page | Social Media | Tráfego Pago | Criativos | E-commerce's .">
 
     <link rel="stylesheet" href="css/main.css">
     <link class="icon-logocircle" rel="icon" type="image/png" href="img/icons/icon.png" alt="icon-abystract">
