--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -10,7 +10,7 @@
         content="Solução digital para o seu negócio ou empreendimento, colocamos sua loja no ar Abystract | Website | Identidade visual |Landing page | Social Media | Tráfego Pago | Criativos | E-commerce's .">
 
     <link rel="stylesheet" href="css/main.css">
-    <link class="icon-logocircle" rel="icon" type="image/png" href="img/icons/icon.png" alt="icon-abystract">
+    <link class="icon-logocircle" rel="icon" type="image/png" href="img/icons/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -24,7 +24,7 @@
         <div class="header-content">
 
             <div class="background-section">
-                <video src="video/treeright19mb.mp4" autoplay loop muted></video>
+                <video src="video/treeright19mb.mp4" autoplay loop muted playsinline poster="img/Fallbackvideo.jpeg" ></video>
             </div>
 
             <div class="nav-block">
@@ -254,7 +254,7 @@
                         <h3>Social Media</h3>
                         <div class="img-container">
                             <!-- <img src="img/bento/Socialmediabanner.png" alt="Social Media"> -->
-                            <iframe src="https://www.behance.net/embed/project/194537243?ilo0=1" height="540"
+                            <iframe title="Social media" src="https://www.behance.net/embed/project/194537243?ilo0=1" height="540"
                                 width="600" allowfullscreen lazyload frameborder="0" allow="clipboard-write4"
                                 refererPolicy="strict-origin-when-cross-origin"></iframe>
                         </div>
@@ -277,7 +277,7 @@
                         <div class="img-container">
 
                             <!-- <img src="img/bento/member.png" alt="Área de Membros"> -->
-                            <iframe src="https://www.behance.net/embed/project/204193357?ilo0=1" height="246"
+                            <iframe title="Social media"  src="https://www.behance.net/embed/project/204193357?ilo0=1" height="246"
                                 width="404" allowfullscreen lazyload frameborder="0" allow="clipboard-write"
                                 refererPolicy="strict-origin-when-cross-origin"></iframe>
                         </div>
@@ -303,7 +303,7 @@
                         <div class="img-container">
 
                             <!-- <img src="img/bento/IDV2.png" alt="Identidade Visual"> -->
-                            <iframe src="https://www.behance.net/embed/project/186079875?ilo0=1" height="240"
+                            <iframe title="Identidade visual"  src="https://www.behance.net/embed/project/186079875?ilo0=1" height="240"
                                 width="500" allowfullscreen lazyload frameborder="0" allow="clipboard-write"
                                 refererPolicy="strict-origin-when-cross-origin"></iframe>
 
