--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -24,7 +24,7 @@
         <div class="header-content">
 
             <div class="background-section">
-                <video src="video/treeright19mb.mp4" autoplay loop muted playsinline poster="img/Fallbackvideo.jpeg" ></video>
+                <video src="video/treeright19mb.mp4" autoplay loop muted playsinline ></video>
             </div>
 
             <div class="nav-block">
