--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -24,8 +24,9 @@
         <div class="header-content">
 
             <div class="background-section">
-                <video src="video/treeright19mb.mp4" autoplay loop muted playsinline poster="img/Fallbackvideo.jpeg"></video>
-               
+                <video src="video/treeright19mb.mp4" autoplay loop muted playsinline
+                    poster="img/Fallbackvideo.jpeg"></video>
+
             </div>
 
             <div class="nav-block">
@@ -220,23 +221,25 @@
                 </div>
                 <div class="service idv-service leftToRight">
                     <h2 class="title leftToRight">Identidade Visual </h2>
-                    <p class="sub-title leftToRight">Desenvolvemos identidades visuais que refletem a essência e os
-                        valores do seu negócio. Criamos logotipos, paletas de cores e materiais gráficos personalizados
-                        para que sua marca se destaque de forma autêntica e impactante. Nosso objetivo é fortalecer sua
-                        presença no mercado, transmitindo credibilidade e conectando sua empresa ao público certo.</p>
+                    <p class="sub-title leftToRight">Nós criamos de forma personalizada tudo aquilo que você quer
+                        transmitir: suas ideias, valores e, principalmente, a alma do seu negócio terá a cara que você
+                        deseja, trazendo a autenticidade que você precisa para se destacar da multidão e alcançar o seu
+                        público.
+                    </p>
                 </div>
                 <div class="service social-service leftToRight">
                     <h2 class="title leftToRight">Social Media / Marketing </h2>
-                    <p class="sub-title leftToRight">Nossa equipe será responsável pela Gestão de Suas Redes Sociais e
-                        por garantir novos conteúdos toda semana, além de impulsionar seus conteúdos para entregá-los à
-                        audiência</p>
+                    <p class="sub-title leftToRight">E se você é aquele tipo de pessoa que quer ser ativa nas redes, mas
+                        se vê sem tempo para programar suas próprias postagens e gerenciar sua conta, nós proporcionamos
+                        um atendimento de social media que ficará responsável por isso para você.
+                    </p>
                 </div>
                 <div class="service paid-traffic-service leftToRight">
                     <h2 class="title leftToRight">Tráfego Pago </h2>
-                    <p class="sub-title leftToRight">Para obter resultados rápidos e eficientes, é essencial uma gestão
-                        de tráfego eficaz. Isso permitirá que seu negócio se destaque frente aos concorrentes, atraindo
-                        mais clientes e potencializando seu crescimento. Sem a necessidade de panfletos e outdoors.
-                        Apareça onde a maior parte das pessoas gastam o seu tempo: na internet.</p>
+                    <p class="sub-title leftToRight">O tráfego orgânico é bom e funciona a longo prazo se houver
+                        consistência nas postagens. Mas, se pretende se destacar com mais rapidez e eficácia, é
+                        necessário um investimento adicional que pode vir com o tráfego pago. Com ele, o seu conteúdo
+                        fica em evidência, como um panfleto virtual que abrange muito mais gente.</p>
                 </div>
             </div>
 
@@ -255,9 +258,9 @@
                         <h3>Social Media</h3>
                         <div class="img-container">
                             <!-- <img src="img/bento/Socialmediabanner.png" alt="Social Media"> -->
-                            <iframe title="Social media" src="https://www.behance.net/embed/project/194537243?ilo0=1" height="540"
-                                width="600" allowfullscreen lazyload frameborder="0" allow="clipboard-write4"
-                                refererPolicy="strict-origin-when-cross-origin"></iframe>
+                            <iframe title="Social media" src="https://www.behance.net/embed/project/194537243?ilo0=1"
+                                height="540" width="600" allowfullscreen lazyload frameborder="0"
+                                allow="clipboard-write4" refererPolicy="strict-origin-when-cross-origin"></iframe>
                         </div>
                         <div class="arrow-border">
                             <span class="arrow material-symbols-rounded">arrow_forward</span>
@@ -278,9 +281,9 @@
                         <div class="img-container">
 
                             <!-- <img src="img/bento/member.png" alt="Área de Membros"> -->
-                            <iframe title="Social media"  src="https://www.behance.net/embed/project/204193357?ilo0=1" height="246"
-                                width="404" allowfullscreen lazyload frameborder="0" allow="clipboard-write"
-                                refererPolicy="strict-origin-when-cross-origin"></iframe>
+                            <iframe title="Social media" src="https://www.behance.net/embed/project/204193357?ilo0=1"
+                                height="246" width="404" allowfullscreen lazyload frameborder="0"
+                                allow="clipboard-write" refererPolicy="strict-origin-when-cross-origin"></iframe>
                         </div>
                         <div class="arrow-border">
                             <span class="arrow material-symbols-rounded">arrow_forward</span>
@@ -304,8 +307,9 @@
                         <div class="img-container">
 
                             <!-- <img src="img/bento/IDV2.png" alt="Identidade Visual"> -->
-                            <iframe title="Identidade visual"  src="https://www.behance.net/embed/project/186079875?ilo0=1" height="240"
-                                width="500" allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                            <iframe title="Identidade visual"
+                                src="https://www.behance.net/embed/project/186079875?ilo0=1" height="240" width="500"
+                                allowfullscreen lazyload frameborder="0" allow="clipboard-write"
                                 refererPolicy="strict-origin-when-cross-origin"></iframe>
 
                         </div>
