Ajustes no tamanho das fontes

--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -47,7 +47,6 @@
                         <li class="item"> <a href="#contato"> Contato </a></li>
                     </ul>
                     
-
                     <div class="menu">
                         <span class="bar"></span>
                         <span class="bar"></span>
@@ -329,7 +328,7 @@
 
                 <div class="title leftToRight">
                     <h2>Entre em contato <br>
-                        <span> conosco e marque <br> um bate-papo!</span>
+                        <span class="span-contact"> conosco e marque <br> um bate-papo!</span>
                     </h2>
                 </div>
             </div>
