--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -28,7 +28,6 @@
                     poster="img/Fallbackvideo.jpeg"></video>
 
             </div>
-
             <div class="nav-block">
 
                 <div class="brand-logo">
@@ -40,11 +39,11 @@
                 <nav class="nav-bar">
 
                     <ul class="nav-items">
-                        <li class="item"> <a href="#inicio"> Início</a></li>
-                        <li class="item"> <a href="#sobre"> Sobre </a></li>
-                        <li class="item"> <a href="#servicos"> Serviços </a></li>
-                        <li class="item"> <a href="#projetos"> Projetos </a></li>
-                        <li class="item"> <a href="#contato"> Contato </a></li>
+                        <li class="item"> <a class="link-item" href="#inicio"> Início</a></li>
+                        <li class="item"> <a class="link-item" href="#sobre"> Sobre </a></li>
+                        <li class="item"> <a class="link-item" href="#servicos"> Serviços </a></li>
+                        <li class="item"> <a class="link-item" href="#projetos"> Projetos </a></li>
+                        <li class="item"> <a class="link-item" href="#contato"> Contato </a></li>
                     </ul>
                     
 
@@ -408,6 +407,7 @@
     </footer>
 
     <script src="js/menubar.js">     </script>
+    <script src="js/navbarcolor.js">     </script>
     <script src="js/counter.js">     </script>
     <script src="js/rangebrands.js"> </script>
     <script src="js/forms.js">       </script>
