--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -317,7 +317,29 @@
     </section>
 
     <footer class="footer">
-        <script src="js/footer.js">      </script>
+        <div class="footer-content container">
+            <div class="sentence">
+
+                <div class="title ">
+                    <h2>
+                        “Comunicação não é o que você diz, <br> é o que os outros entendem. ”
+                    </h2>
+                </div>
+
+                <div class="subtitle">
+                    <p>
+                        David Ogilvy <span> - Founder of Ogilvy & Mather </span>
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="block-inner">
+                <script src="js/footer.js">      </script>
+            </div>
+            
+        </div>
+
     </footer>
 
 
