--- a/Public_html/not_found.html
+++ b/Public_html/not_found.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,55 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
+
 <body>
-    
+
+    <header class="header-section" id="inicio">
+        <div class="nav-block">
+            <script src="js/nav.js"></script>
+        </div>
+
+    </header>
+    <section class="not-found">
+        <div class="not-found-content">
+            <div class="not-found-image">
+                <img src="img/404-not-found.png" alt="not-found-image-404">
+            </div>
+        </div>
+
+    </section>
+
+
+    <footer class="footer">
+        <div class="footer-content container">
+            
+            <div class="sentence">
+                <div class="title ">
+                    <h2>
+                        Não encontramos a página que você tentou acessar.                    </h2>
+                </div>
+
+                <div class="subtitle">
+                    <p>
+                        Verifique o link ou digite o que você precisa na barra de pesquisa ali em cima.
+                    </p>
+                </div>
+                <a href="/Public_html/#inicio">
+                    <button class="btn-contact">Voltar ao inicio </button>
+                </a>
+
+            </div>
+
+
+            <div class="block-inner">
+                <script src="js/footer.js">      </script>
+            </div>
+
+        </div>
+        </div>
+
+    </footer>
+
 </body>
+
 </html>
