vercel not found route set up

--- a/Public_html/not_found.html
+++ b/Public_html/not_found.html
@@ -47,7 +47,7 @@
                         Verifique o link ou digite o que você precisa na barra de pesquisa ali em cima.
                     </p>
                 </div>
-                <a href="/Public_html/#inicio">
+                <a href="/Public_html/index.html">
                     <button class="btn-contact">Voltar ao inicio </button>
                 </a>
 
