--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Abystract - Soluções digitais </title>
+    <meta name="facebook-domain-verification" content="hupq0fllpisonexgrqwudhorubvo5q" />
     <meta name="description"
         content="Solução digital para o seu negócio ou empreendimento, colocamos sua loja no ar Abystract | Website | Identidade visual |Landing page | Social Media | Tráfego Pago | Criativos | E-commerce's .">
 
