meta tag facebook inserido

--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Abystract - Soluções digitais </title>
-    <meta name="facebook-domain-verification" content="hupq0fllpisonexgrqwudhorubvo5q" />
+
+    <!-- * verificação de dominio meta  -->
+
+    <meta name="facebook-domain-verification" content="k6pmu45w673bobz59zemczmbop4a8r" />
+    
     <meta name="description"
         content="Solução digital para o seu negócio ou empreendimento, colocamos sua loja no ar Abystract | Website | Identidade visual |Landing page | Social Media | Tráfego Pago | Criativos | E-commerce's .">
 
