CSS AJUSTES STATISTICS PANEL

--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -120,7 +120,7 @@
 
                 <div class="block1">
                     <h2 class="title leftToRight"> Conheça-nos. </h2>
-                    <p class="sub sub-1 leftToRight">A Abystract Digital Solutions foi fundada nos dia 08 de agosto de
+                    <p class="sub sub-1 leftToRight">A Abystract Digital Solutions foi fundada no dia 08 de agosto de
                         2024 por Júlio Portugal e Moisés Souza. Após sete anos de amizade e dois anos de planejamento,
                         unimos nossas habilidades para criar uma empresa que oferece serviços completos de criação de
                         websites, identidade visual e gerenciamento de redes sociais. A partir dessa parceria, buscamos
@@ -162,10 +162,9 @@
                     <div class="background-section">
                         <video src="video/logo3d.mp4" autoplay loop muted></video>
                     </div>
-
                 </div>
-
             </div>
+            
 
             <div class="statistics-panel">
                 <div class="statistics customers">
@@ -173,7 +172,9 @@
                         <span>+</span>
                         <h2 class="count" data-target="344"></h2>
                     </div>
+
                     <p>Projetos concluídos </p>
+                    
                 </div>
                 <div class="statistics customers">
                     <div class="item">
