incusão forms pre briefing no botao

--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -78,9 +78,9 @@
             </script>
 
             <div class="buttons">
-                <a href="https://api.whatsapp.com/send?phone=5511934588890">
+                <a href="/Public_html/prebriefing.html">
                     <button class="btn-budge">
-                        <span class="button-text">OBTER ORÇAMENTO</span>
+                        <span class="button-text">Entrar em contato</span>
                         <span class="arrow material-symbols-rounded">arrow_forward</span>
                     </button>
                 </a>
