incusão forms pre briefing no botao

--- a/Public_html/index.html
+++ b/Public_html/index.html
@@ -78,7 +78,7 @@
             </script>
 
             <div class="buttons">
-                <a href="/Public_html/prebriefing.html">
+                <a href="/prebriefing.html">
                     <button class="btn-budge">
                         <span class="button-text">Entrar em contato</span>
                         <span class="arrow material-symbols-rounded">arrow_forward</span>
